ircv3_parse_derive/tests/ui/de/fail/invalid_source_component.stderr
error: invalid source field (valid options: `name`, `user`, or `host`)
 --> tests/ui/de/fail/invalid_source_component.rs:5:20
  |
5 |     #[irc(source = "invalid")]
  |                    ^^^^^^^^^
